After adding the route to paypal

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,9 @@
         <title>Payment GateWay Integration App</title>
     </head>
     <body>
-        <h1>It will be helpful to us if u donate...</h1>
-        <form action="/pay" method="post">
-          <input type="submit" value="Buy">
+        <h1>Click the below donate button to donate 50$.</h1>
+        <form action=" /pay" method="post">
+          <input type="submit" value="Donate">
         </form>
     </body>
 </html>
